--- a/Improved K-means algorithm based on density Canopy.ipynb
+++ b/Improved K-means algorithm based on density Canopy.ipynb
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,13 +85,11 @@
     "    distances = []\n",
     "    for i in range(k): # Qtd de clusters\n",
     "        distance = 0\n",
-    "        for index_labels, value_labels in enumerate(kmeans.labels_): #kmeans.labels_ possui a que cluster cada elemento pertence\n",
+    "        for index_labels, value_labels in enumerate(kmeans.labels_): #kmeans.labels_ possui o cluster de cada elemento\n",
     "            if (i == value_labels):\n",
     "                #print(value_labels)\n",
     "                distance = distance + getDistance(kmeans.cluster_centers_[value_labels], data.loc[index_labels].values)\n",
-    "        \n",
     "        distances.append(distance) #Erro quadratico medio de cada cluster\n",
-    "    \n",
     "    distances = np.asarray(distances)\n",
     "    error = np.sum(distances)\n",
     "    return error"
@@ -99,22 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# data = pd.read_csv(\"datasets/iris.data\", header=None)\n",
-    "# target = data.iloc[:,-1]\n",
-    "# data = data.iloc[:,:-1]\n",
-    "# meanDis = mean_dist(data)\n",
-    "# den = get_densities(data, meanDis)\n",
-    "# As = cluser_dist_mean(data, den, meanDis)\n",
-    "# clusters_dist(data, den)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -224,7 +207,7 @@
     "    aux_D = D.copy()\n",
     "    aux_D.drop(cluster, inplace=True) #removendo cluster ja identificado\n",
     "    aux_D.reset_index(drop=True, inplace=True)\n",
-    "    while (not auxD.empty):\n",
+    "    while (not aux_D.empty):\n",
     "        new_densities = get_densities(aux_D, meanDis)\n",
     "        a = cluser_dist_mean(aux_D, new_densities, meanDis) #mantem-se meanDis\n",
     "        s = clusters_dist(aux_D, new_densities)\n",
@@ -258,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -270,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 96,
    "metadata": {
     "scrolled": true
    },
@@ -284,102 +267,137 @@
       "----- soybean-small -----\n",
       "\n",
       "(47, 36)\n",
-      "densidade:  [4] a:  [1.42544879] s:  6.928203230275509 weight:  [19.44146505]\n",
-      "densidade:  [4] a:  [1.25233081] s:  7.0 weight:  [22.35830967]\n",
-      "densidade:  [10] a:  [0.68063463] s:  6.855654600401044 weight:  [100.72444602]\n",
-      "densidade:  [10] a:  [0.51850195] s:  6.324555320336759 weight:  [121.97746411]\n",
-      "densidade:  [4] a:  [1.42544879] s:  3.3166247903554 weight:  [9.30689283]\n",
-      "KS: 3\n",
+      "KS: 3 [[3 1 2 0 0 2 1 2 1 1 1 1 0 2 2 0 0 0 1 0 2 2 0 0 0 0 0 3 4 0 0 0 0 0 1]\n",
+      " [4 0 0 1 0 2 3 1 1 1 1 1 0 2 2 0 0 0 1 0 0 3 0 0 0 2 1 0 4 0 0 0 0 0 0]\n",
+      " [5 0 2 1 0 3 1 1 1 2 1 1 0 2 2 0 0 0 1 1 3 0 1 1 0 0 0 0 4 0 0 0 0 0 0]]\n",
       "\n",
       "----- iris -----\n",
       "\n",
       "(150, 5)\n",
-      "densidade:  [24] a:  [0.05370115] s:  6.498461356351979 weight:  [2904.27787241]\n",
-      "densidade:  [24] a:  [0.04989528] s:  6.717886572427373 weight:  [3231.35335588]\n",
-      "densidade:  [16] a:  [0.1564202] s:  1.8165902124584954 weight:  [185.81643419]\n",
-      "densidade:  [16] a:  [0.09518695] s:  1.284523257866513 weight:  [215.91585604]\n",
-      "densidade:  [16] a:  [0.10844554] s:  1.5165750888103098 weight:  [223.75471445]\n",
-      "densidade:  [16] a:  [0.11142851] s:  1.562049935181331 weight:  [224.29448082]\n",
-      "KS: 3\n",
+      "KS: 3 [[5.6 2.9 3.6 1.3]\n",
+      " [4.7 3.2 1.3 0.2]\n",
+      " [6.9 3.2 5.7 2.3]]\n",
       "\n",
       "----- wine -----\n",
       "\n",
       "(178, 14)\n",
-      "densidade:  [16] a:  [1.07668714] s:  57.77427974453685 weight:  [858.54881936]\n",
-      "densidade:  [16] a:  [1.02449849] s:  56.7273875654432 weight:  [885.93415431]\n",
-      "densidade:  [11] a:  [0.94543618] s:  84.06465666378469 weight:  [978.07894336]\n",
-      "densidade:  [11] a:  [0.86959079] s:  82.05024801912546 weight:  [1037.9051092]\n",
-      "densidade:  [11] a:  [0.84244005] s:  82.02780748014663 weight:  [1071.06242235]\n",
-      "densidade:  [16] a:  [1.07668714] s:  35.40286005395609 weight:  [526.10060802]\n",
-      "densidade:  [16] a:  [0.9816747] s:  41.20869689762102 weight:  [671.64729087]\n",
-      "densidade:  [2] a:  [11.33723511] s:  18.034084395943147 weight:  [3.18139021]\n",
-      "densidade:  [2] a:  1 s:  25.584637968906264 weight:  [51.16927594]\n",
-      "KS: 4\n",
+      "KS: 4 [[2.000e+00 1.196e+01 1.090e+00 2.300e+00 2.100e+01 1.010e+02 3.380e+00\n",
+      "  2.140e+00 1.300e-01 1.650e+00 3.210e+00 9.900e-01 3.130e+00]\n",
+      " [1.000e+00 1.376e+01 1.530e+00 2.700e+00 1.950e+01 1.320e+02 2.950e+00\n",
+      "  2.740e+00 5.000e-01 1.350e+00 5.400e+00 1.250e+00 3.000e+00]\n",
+      " [2.000e+00 1.225e+01 1.730e+00 2.120e+00 1.900e+01 8.000e+01 1.650e+00\n",
+      "  2.030e+00 3.700e-01 1.630e+00 3.400e+00 1.000e+00 3.170e+00]\n",
+      " [2.000e+00 1.221e+01 1.190e+00 1.750e+00 1.680e+01 1.510e+02 1.850e+00\n",
+      "  1.280e+00 1.400e-01 2.500e+00 2.850e+00 1.280e+00 3.070e+00]]\n",
       "\n",
       "----- segmentation -----\n",
       "\n",
-      "(210, 20)\n",
-      "densidade:  [17] a:  [7.85034285] s:  1508.9448641246222 weight:  [3267.63597107]\n",
-      "densidade:  [17] a:  [7.32652713] s:  1507.900734034794 weight:  [3498.83540046]\n",
-      "densidade:  [9] a:  1 s:  1402.9880585339356 weight:  [12626.89252681]\n",
-      "densidade:  [10] a:  1 s:  1503.8613921595577 weight:  [15038.6139216]\n",
-      "densidade:  [16] a:  [7.73009944] s:  362.16178335031 weight:  [749.61371143]\n",
-      "densidade:  [16] a:  [7.26545907] s:  363.6184790434578 weight:  [800.76091705]\n",
-      "densidade:  [3] a:  [14.0670883] s:  24.54237876366202 weight:  [5.23399972]\n",
-      "densidade:  [3] a:  [13.65538303] s:  24.54237876366202 weight:  [5.39180308]\n",
-      "KS: 4\n",
+      "(210, 20)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/anaconda3/lib/python3.7/site-packages/ipykernel_launcher.py:35: RuntimeWarning: divide by zero encountered in true_divide\n",
+      "/anaconda3/lib/python3.7/site-packages/ipykernel_launcher.py:35: RuntimeWarning: invalid value encountered in multiply\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "KS: 4 [[ 1.4000000e+02  7.3000000e+01  9.0000000e+00  0.0000000e+00\n",
+      "   0.0000000e+00  1.7222214e+00  8.2775980e-01  7.7777740e-01\n",
+      "   1.0036957e+00  4.6296295e+01  4.5666668e+01  5.1111110e+01\n",
+      "   4.2111110e+01 -1.8888888e+00  1.4444445e+01 -1.2555555e+01\n",
+      "   5.1111110e+01  1.7615560e-01 -1.6815889e+00]\n",
+      " [ 4.0000000e+00  1.8900000e+02  9.0000000e+00  0.0000000e+00\n",
+      "   0.0000000e+00  2.0555565e+00  3.8851852e+00  1.1722221e+01\n",
+      "   1.1459634e+02  2.6444445e+01  2.3444445e+01  3.3000000e+01\n",
+      "   2.2888890e+01 -9.0000000e+00  1.9666666e+01 -1.0666667e+01\n",
+      "   3.3000000e+01  2.7147257e-01 -2.1010017e+00]\n",
+      " [ 1.2400000e+02  2.9000000e+01  9.0000000e+00  0.0000000e+00\n",
+      "   0.0000000e+00  1.0000013e+00  7.1110760e-01  1.0555534e+00\n",
+      "   9.0741664e-01  1.2844444e+02  1.1922222e+02  1.4288889e+02\n",
+      "   1.2322222e+02 -2.7666666e+01  4.3333332e+01 -1.5666667e+01\n",
+      "   1.4288889e+02  1.6561614e-01 -2.2711280e+00]\n",
+      " [ 1.9700000e+02  2.3600000e+02  9.0000000e+00  0.0000000e+00\n",
+      "   0.0000000e+00  2.4444444e+00  6.8296280e+00  3.3333333e+00\n",
+      "   7.5999980e+00  1.6074074e+01  1.3111111e+01  1.6666668e+01\n",
+      "   1.8444445e+01 -8.8888890e+00  1.7777778e+00  7.1111110e+00\n",
+      "   1.8555555e+01  2.9272884e-01  2.7898002e+00]]\n",
       "\n",
       "----- ionosphere -----\n",
       "\n",
       "(351, 35)\n",
-      "densidade:  [3] a:  1 s:  8.560014291600218 weight:  [25.68004287]\n",
-      "densidade:  [4] a:  1 s:  8.168772334310708 weight:  [32.67508934]\n",
-      "densidade:  [5] a:  1 s:  8.090261743157635 weight:  [40.45130872]\n",
-      "densidade:  [5] a:  1 s:  8.452027729403163 weight:  [42.26013865]\n",
-      "densidade:  [7] a:  1 s:  7.84463029438609 weight:  [54.91241206]\n",
-      "densidade:  [3] a:  [2.6056198] s:  7.771796025758782 weight:  [8.94811594]\n",
-      "densidade:  [4] a:  [1.30680857] s:  6.852954709773004 weight:  [20.97615483]\n",
-      "densidade:  [5] a:  [1.45322671] s:  7.111997196667051 weight:  [24.46967541]\n",
-      "densidade:  [5] a:  1 s:  6.738560527449464 weight:  [33.69280264]\n",
-      "densidade:  [3] a:  [2.6056198] s:  7.771796025758782 weight:  [8.94811594]\n",
-      "densidade:  [2] a:  1 s:  7.073006377524341 weight:  [14.14601276]\n",
-      "densidade:  [3] a:  [2.6056198] s:  7.771796025758782 weight:  [8.94811594]\n",
-      "densidade:  [2] a:  [3.89822967] s:  3.898229666643565 weight:  [2.]\n",
-      "KS: 6\n"
+      "KS: 7 [[ 1.       0.       0.21429 -0.09524  0.33333  0.07143  0.19048  0.19048\n",
+      "   0.2381   0.09524  0.40476  0.02381  0.30952 -0.04762  0.30952 -0.04762\n",
+      "   0.28571 -0.11905  0.33333  0.04762  0.30952  0.       0.21429 -0.11905\n",
+      "   0.35714 -0.04762  0.22109 -0.0229   0.19048  0.       0.16997 -0.02034\n",
+      "   0.14694 -0.01877]\n",
+      " [ 1.       0.       1.      -0.5421   1.      -1.       1.      -1.\n",
+      "   1.       0.36217  1.      -0.41119  1.       1.       1.      -1.\n",
+      "   1.      -0.29354  1.      -0.93599  1.       1.       1.       1.\n",
+      "   1.      -0.40888  1.      -0.62745  1.      -1.       1.      -1.\n",
+      "   1.      -1.     ]\n",
+      " [ 1.       0.       0.9287   0.33164  0.76168  0.62349  0.49305  0.84266\n",
+      "   0.21592  0.95193 -0.13956  0.96167 -0.47202  0.8359  -0.70747  0.6549\n",
+      "  -0.87474  0.3675  -0.91814  0.05595 -0.89824 -0.26173 -0.73969 -0.54069\n",
+      "  -0.50757 -0.74735 -0.22323 -0.86122  0.0781  -0.87159  0.36021 -0.78057\n",
+      "   0.59407 -0.6027 ]\n",
+      " [ 1.       0.       1.       0.06843  1.       0.14211  1.       0.22108\n",
+      "   1.      -0.125    1.       0.39495  1.       0.48981  1.       0.58986\n",
+      "  -0.375    1.       1.       0.       1.       0.92001  1.       1.\n",
+      "   1.       1.       1.       1.       1.       0.25     1.       1.\n",
+      "   1.       1.     ]\n",
+      " [ 0.       0.       1.      -1.       1.      -1.       1.      -1.\n",
+      "   1.      -1.       1.       1.       1.       1.       1.      -1.\n",
+      "   1.       1.       1.       1.       1.       1.       1.      -1.\n",
+      "   1.      -1.       1.      -1.       1.       0.65625  0.       0.\n",
+      "   1.      -1.     ]\n",
+      " [ 1.       0.       1.       0.54902  0.62745  1.       0.01961  1.\n",
+      "  -0.4902   0.92157 -0.82353  0.58824 -1.       0.11765 -0.96078 -0.33333\n",
+      "  -0.64706 -0.68627 -0.23529 -0.86275  0.35294 -1.       0.7451  -0.72549\n",
+      "   0.92157 -0.21569  0.92874  0.21876  0.72549  0.56863  0.23529  0.90196\n",
+      "  -0.11765  0.90196]\n",
+      " [ 1.       0.       0.94531 -0.03516 -1.      -0.33203 -1.      -0.01563\n",
+      "   0.97266  0.01172  0.93359 -0.01953 -1.       0.16406 -1.      -0.00391\n",
+      "   0.95313 -0.03516  0.92188 -0.02734 -0.99219  0.11719 -0.93359  0.34766\n",
+      "   0.95703 -0.00391  0.82041  0.13758  0.90234 -0.06641 -1.      -0.1875\n",
+      "  -1.      -0.34375]]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/anaconda3/lib/python3.7/site-packages/ipykernel_launcher.py:35: RuntimeWarning: divide by zero encountered in true_divide\n",
+      "/anaconda3/lib/python3.7/site-packages/ipykernel_launcher.py:35: RuntimeWarning: invalid value encountered in multiply\n"
      ]
     }
    ],
    "source": [
     "for kmeansType in kmeansTypes:\n",
     "    print (\"--------- \"+ kmeansType +\" test ---------\")\n",
-    "    \n",
     "    for index, file in enumerate(files):\n",
     "        print (\"\\n----- \"+file+\" -----\\n\")\n",
     "        data = pd.read_csv(\"datasets/\"+file+\".data\", header=None)\n",
     "        print (data.shape)\n",
-    "\n",
-    "        #display(data.head())\n",
     "        if file == \"segmentation\": #Target eh na primeira coluna\n",
     "            target = data.iloc[:,0]\n",
-    "            data = data.iloc[:,1:]\n",
-    "            \n",
-    "            \n",
+    "            data = data.iloc[:,1:]   \n",
     "        else: #Target na última coluna\n",
     "            target = data.iloc[:,-1]\n",
     "            data = data.iloc[:,:-1]\n",
-    "        \n",
-    "        \n",
-    "        getWeight(data)\n",
-    "        \n",
+    "        run(data)\n",
     "        clustering_times = []\n",
     "        start = time()\n",
     "        k = ks[index]\n",
     "        kmeans = KMeans(n_clusters=k, random_state=100, init=kmeansType, n_init=1, max_iter=100).fit(data)\n",
     "        #display(data)\n",
     "        error = getSquaredError(data, kmeans)\n",
-    "        \n",
-    "        \n",
-    "                #print(kmeans.labels_)\n",
+    "        #print(kmeans.labels_)\n",
     "        end = time()\n",
     "        T1 = error/(data.shape[0])\n",
     "        T2 = error/(data.shape[0]/2)\n",
