--- a/Improved K-means algorithm based on density Canopy.ipynb
+++ b/Improved K-means algorithm based on density Canopy.ipynb
@@ -1,19 +1,6 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Comparar KMeans com Improved Density Canopy com KMeans \"puro\" e outras variações.\n",
-    "\n",
-    "Métricas erro Quadrático médio\n",
-    "\n",
-    "1. Calcular MeanDis de cada elemento\n",
-    "2. Calcular densidade de cada elemento\n",
-    "3. O com maior densidade é o centro e eliminar os que não estão dentro do raio."
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -66,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -126,7 +113,7 @@
     "    return df\n",
     "\n",
     "#Definition 3\n",
-    "def cluser_dist_mean(D, densities, meanDis):\n",
+    "def cluster_dist_mean(D, densities, meanDis):\n",
     "    a = np.zeros(D.shape[0])\n",
     "    densities_aux = densities.copy().values\n",
     "    for i, row_i in enumerate(D.values):\n",
@@ -202,14 +189,14 @@
     "\n",
     "def run(D):\n",
     "    meanDis = mean_dist(D)\n",
-    "    centers, cluster = getCenter(D, meanDis)\n",
+    "    centers, cluster = getCluster(D, meanDis)\n",
     "    centers = np.array([centers])\n",
     "    aux_D = D.copy()\n",
     "    aux_D.drop(cluster, inplace=True) #removendo cluster ja identificado\n",
     "    aux_D.reset_index(drop=True, inplace=True)\n",
     "    while (not aux_D.empty):\n",
     "        new_densities = get_densities(aux_D, meanDis)\n",
-    "        a = cluser_dist_mean(aux_D, new_densities, meanDis) #mantem-se meanDis\n",
+    "        a = cluster_dist_mean(aux_D, new_densities, meanDis) #mantem-se meanDis\n",
     "        s = clusters_dist(aux_D, new_densities)\n",
     "        densities = new_densities.values\n",
     "        aux_D, densities, s = removeOutliers(aux_D, densities, s, meanDis)\n",
@@ -219,29 +206,17 @@
     "#                 weight = densities[i] * (1/a[i]) * s[i]\n",
     "#                 print(\"densidade: \", densities[i], \"a: \", a[i], \"s: \", s[i], \"weight: \", weight)\n",
     "#                 aux_index = i\n",
-    "        aux_center, cluster = getCenter(aux_D, meanDis, firstExecution=False, index=aux_index)\n",
+    "        aux_center, cluster = getCluster(aux_D, meanDis, firstExecution=False, index=aux_index)\n",
     "        aux_center = np.array([aux_center])\n",
     "        centers = np.concatenate((centers, aux_center), axis=0)\n",
     "        aux_D.drop(cluster, inplace=True) #removendo cluster ja identificado\n",
     "        aux_D.reset_index(drop=True, inplace=True)\n",
-    "    print(\"KS:\", len(centers), centers)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### possiveis problemas que podem estar ocorrendo \n",
-    "1. em getAs a função estar errada\n",
-    "2. Checar se os valores dropados estão corretos\n",
-    "3. Ver se foi retirado o index tb\n",
-    "4. Checar se esses limites de outliers são suficientes\n",
-    "5. Checar se algum índice não está estranho"
+    "    print(\"KS:\", len(centers), centers)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -253,10 +228,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
-   "metadata": {
-    "scrolled": true
-   },
+   "execution_count": 6,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -299,8 +272,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/anaconda3/lib/python3.7/site-packages/ipykernel_launcher.py:35: RuntimeWarning: divide by zero encountered in true_divide\n",
-      "/anaconda3/lib/python3.7/site-packages/ipykernel_launcher.py:35: RuntimeWarning: invalid value encountered in multiply\n"
+      "/home/pgdock/anaconda3/lib/python3.6/site-packages/ipykernel_launcher.py:35: RuntimeWarning: divide by zero encountered in true_divide\n",
+      "/home/pgdock/anaconda3/lib/python3.6/site-packages/ipykernel_launcher.py:35: RuntimeWarning: invalid value encountered in multiply\n"
      ]
     },
     {
@@ -330,7 +303,21 @@
       "\n",
       "----- ionosphere -----\n",
       "\n",
-      "(351, 35)\n",
+      "(351, 35)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/pgdock/anaconda3/lib/python3.6/site-packages/ipykernel_launcher.py:35: RuntimeWarning: divide by zero encountered in true_divide\n",
+      "/home/pgdock/anaconda3/lib/python3.6/site-packages/ipykernel_launcher.py:35: RuntimeWarning: invalid value encountered in multiply\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "KS: 7 [[ 1.       0.       0.21429 -0.09524  0.33333  0.07143  0.19048  0.19048\n",
       "   0.2381   0.09524  0.40476  0.02381  0.30952 -0.04762  0.30952 -0.04762\n",
       "   0.28571 -0.11905  0.33333  0.04762  0.30952  0.       0.21429 -0.11905\n",
@@ -367,14 +354,6 @@
       "   0.95703 -0.00391  0.82041  0.13758  0.90234 -0.06641 -1.      -0.1875\n",
       "  -1.      -0.34375]]\n"
      ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/anaconda3/lib/python3.7/site-packages/ipykernel_launcher.py:35: RuntimeWarning: divide by zero encountered in true_divide\n",
-      "/anaconda3/lib/python3.7/site-packages/ipykernel_launcher.py:35: RuntimeWarning: invalid value encountered in multiply\n"
-     ]
     }
    ],
    "source": [
@@ -408,22 +387,6 @@
     "        #print(clustering_times)\n",
     "        #print(kmeans.cluster_centers_)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#usando numpy em vez do pandas pode tornar mais rápido pra essas operações"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -442,7 +405,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
