finally implementation of algorithm

--- a/Improved K-means algorithm based on density Canopy.ipynb
+++ b/Improved K-means algorithm based on density Canopy.ipynb
@@ -2,13 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 191,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
     "from time import time\n",
+    "\n",
+    "from functools import reduce\n",
     "\n",
     "from IPython.display import display\n",
     "\n",
@@ -18,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 225,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,7 +101,7 @@
     "    for i, row_i in enumerate(D):\n",
     "        for j, row_j in enumerate(D[i+1:,]):\n",
     "            sum_D[i][j] = euclideanDistance(row_i, row_j)\n",
-    "    return (2/(n*(n-1))) * np.sum(sum_D)\n",
+    "    return (2/(n*(n-1))) * np.sum(sum_D) if n > 1 else D.sum()\n",
     "\n",
     "# Definition 2\n",
     "def get_densities(D, meanDis):\n",
@@ -109,26 +111,25 @@
     "        for j, row_j in enumerate(aux_D):\n",
     "            if euclideanDistance(row_i, row_j) - meanDis < 0:\n",
     "                densities[i] += 1\n",
-    "    df = pd.DataFrame(data=densities, columns=[\"density\"])\n",
-    "    return df\n",
+    "    return densities\n",
     "\n",
     "#Definition 3\n",
     "def cluster_dist_mean(D, densities, meanDis):\n",
     "    a = np.zeros(D.shape[0])\n",
-    "    densities_aux = densities.copy().values\n",
+    "    densities_aux = densities.copy()\n",
     "    for i, row_i in enumerate(D.values):\n",
     "        sum_dists = 0\n",
     "        for j, row_j in enumerate(D.values):\n",
     "            dist = euclideanDistance(row_i, row_j)\n",
     "            if dist - meanDis < 0:\n",
     "                sum_dists += dist\n",
-    "        a[i] = (2/(densities_aux[i]*(densities_aux[i]-1))) * sum_dists\n",
+    "        a[i] = 0 if sum_dists == 0 else (densities_aux[i]*(densities_aux[i]-1)) / 2 * sum_dists\n",
     "    return a\n",
     "\n",
     "#Definition 4\n",
     "def clusters_dist(D, densities):\n",
     "    s = []\n",
-    "    densities_aux = densities.values\n",
+    "    densities_aux = densities.copy()\n",
     "    for i, row_i in enumerate(D.values):\n",
     "        maxDist = 0\n",
     "        minDist = float(\"inf\")\n",
@@ -158,14 +159,13 @@
     "        w.append(p[i] * (1/a[i]) * s[i])\n",
     "    return w\n",
     "        \n",
-    "def getCluster(D, meanDis, firstExecution=True, index=None): \n",
+    "def getCluster(D, meanDis, index=None): \n",
     "    aux_D = D.copy()\n",
     "    df = get_densities(D, meanDis)\n",
-    "    if (firstExecution == True): #Primeira execução pega o de maior densidade\n",
-    "        rows = D.iloc[df.idxmax(axis=0)].values\n",
-    "        row_i = rows[-1] #pegando o último index com maior peso, caso tenha mais de 1\n",
+    "    if (index == None): #Primeira execução pega o de maior densidade\n",
+    "        row_i = D.iloc[np.argmax(df)].values\n",
     "    else:\n",
-    "        row_i = D.iloc[index].values #pegando index passado, no caso o com maior peso\n",
+    "        row_i = D.iloc[index].values\n",
     "    cluster = []\n",
     "    for j, row_j in enumerate(aux_D.values):\n",
     "        if euclideanDistance(row_i, row_j) - meanDis < 0:\n",
@@ -175,7 +175,7 @@
     "    #display(auxD)\n",
     "    return row_i, cluster #Elemento central e cluster\n",
     "\n",
-    "def removeOutliers(aux_D, densities, s, meanDis):\n",
+    "def removeOutliers(aux_D, densities, a, s, meanDis):\n",
     "    #remove elemento com densidade = 1 e que o s[i] seja maior que o raio\n",
     "    outliers = []\n",
     "    for i, row_i in enumerate(aux_D.values):\n",
@@ -184,39 +184,58 @@
     "    aux_D.drop(outliers, inplace=True) #removendo outliers\n",
     "    aux_D.reset_index(drop=True, inplace=True)\n",
     "    densities = np.delete(densities, outliers, 0)\n",
+    "    a = np.delete(a, outliers, 0)\n",
     "    s = np.delete(s, outliers, 0)\n",
     "    return aux_D, densities, s\n",
     "\n",
+    "def remove_cluster(D, meanDis, idx=None):\n",
+    "    center, cluster = getCluster(D, meanDis, index=idx)\n",
+    "    D.drop(cluster, inplace=True) #removendo cluster ja identificado\n",
+    "    D.reset_index(drop=True, inplace=True)\n",
+    "    return center\n",
+    "\n",
     "def run(D):\n",
+    "    \n",
+    "    # Step 1\n",
     "    meanDis = mean_dist(D)\n",
-    "    centers, cluster = getCluster(D, meanDis)\n",
-    "    centers = np.array([centers])\n",
     "    aux_D = D.copy()\n",
-    "    aux_D.drop(cluster, inplace=True) #removendo cluster ja identificado\n",
-    "    aux_D.reset_index(drop=True, inplace=True)\n",
-    "    while (not aux_D.empty):\n",
-    "        new_densities = get_densities(aux_D, meanDis)\n",
-    "        a = cluster_dist_mean(aux_D, new_densities, meanDis) #mantem-se meanDis\n",
-    "        s = clusters_dist(aux_D, new_densities)\n",
-    "        densities = new_densities.values\n",
-    "        aux_D, densities, s = removeOutliers(aux_D, densities, s, meanDis)\n",
-    "        aux_index = np.argmax(product_weight(densities, a, s))\n",
-    "#         for i, row_i in enumerate(aux_D.values):\n",
-    "#             if (densities[i] * (1/a[i]) * s[i]) > weight:\n",
-    "#                 weight = densities[i] * (1/a[i]) * s[i]\n",
-    "#                 print(\"densidade: \", densities[i], \"a: \", a[i], \"s: \", s[i], \"weight: \", weight)\n",
-    "#                 aux_index = i\n",
-    "        aux_center, cluster = getCluster(aux_D, meanDis, firstExecution=False, index=aux_index)\n",
-    "        aux_center = np.array([aux_center])\n",
+    "    center = remove_cluster(aux_D, meanDis)\n",
+    "    centers = np.array([center])\n",
+    "    \n",
+    "    # Step 2\n",
+    "    meanDis = mean_dist(aux_D)\n",
+    "    densities = get_densities(aux_D, meanDis)\n",
+    "    a = cluster_dist_mean(aux_D, densities, meanDis)\n",
+    "    s = clusters_dist(aux_D, densities)\n",
+    "    w_set = densities * a * s\n",
+    "    aux_index = np.argmax(w_set)\n",
+    "    center = remove_cluster(aux_D, meanDis, idx=aux_index)\n",
+    "    center = np.array([center])\n",
+    "    centers = np.concatenate((centers, center), axis=0)\n",
+    "    \n",
+    "    # Step 3\n",
+    "    while(not aux_D.empty):\n",
+    "        meanDis = mean_dist(aux_D)\n",
+    "        densities = get_densities(aux_D, meanDis)\n",
+    "        a = cluster_dist_mean(aux_D, densities, meanDis)\n",
+    "        s = clusters_dist(aux_D, densities)\n",
+    "        aux_D, densities, a = removeOutliers(aux_D, densities, a, s, meanDis)\n",
+    "        clusters_distance_matrix = pairwise_distances(aux_D, centers, metric='euclidean')\n",
+    "        \n",
+    "        w_set = densities * a\n",
+    "        for ids, row_i in enumerate(aux_D.values):\n",
+    "            w_set[ids] = reduce(lambda x, y: x * y, clusters_distance_matrix[ids] * w_set[ids])\n",
+    "        c_id = np.argmax(w_set.max())\n",
+    "        center = remove_cluster(aux_D, meanDis, idx=c_id)\n",
+    "        aux_center = np.array([center])\n",
     "        centers = np.concatenate((centers, aux_center), axis=0)\n",
-    "        aux_D.drop(cluster, inplace=True) #removendo cluster ja identificado\n",
-    "        aux_D.reset_index(drop=True, inplace=True)\n",
-    "    print(\"KS:\", len(centers), centers)\n"
+    "    return centers\n",
+    "#     print(\"KS:\", len(centers), centers)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 228,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -228,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 229,
    "metadata": {},
    "outputs": [
     {
@@ -240,119 +259,27 @@
       "----- soybean-small -----\n",
       "\n",
       "(47, 36)\n",
-      "KS: 3 [[3 1 2 0 0 2 1 2 1 1 1 1 0 2 2 0 0 0 1 0 2 2 0 0 0 0 0 3 4 0 0 0 0 0 1]\n",
-      " [4 0 0 1 0 2 3 1 1 1 1 1 0 2 2 0 0 0 1 0 0 3 0 0 0 2 1 0 4 0 0 0 0 0 0]\n",
-      " [5 0 2 1 0 3 1 1 1 2 1 1 0 2 2 0 0 0 1 1 3 0 1 1 0 0 0 0 4 0 0 0 0 0 0]]\n",
+      "5\n",
       "\n",
       "----- iris -----\n",
       "\n",
       "(150, 5)\n",
-      "KS: 3 [[5.6 2.9 3.6 1.3]\n",
-      " [4.7 3.2 1.3 0.2]\n",
-      " [6.9 3.2 5.7 2.3]]\n",
+      "6\n",
       "\n",
       "----- wine -----\n",
       "\n",
       "(178, 14)\n",
-      "KS: 4 [[2.000e+00 1.196e+01 1.090e+00 2.300e+00 2.100e+01 1.010e+02 3.380e+00\n",
-      "  2.140e+00 1.300e-01 1.650e+00 3.210e+00 9.900e-01 3.130e+00]\n",
-      " [1.000e+00 1.376e+01 1.530e+00 2.700e+00 1.950e+01 1.320e+02 2.950e+00\n",
-      "  2.740e+00 5.000e-01 1.350e+00 5.400e+00 1.250e+00 3.000e+00]\n",
-      " [2.000e+00 1.225e+01 1.730e+00 2.120e+00 1.900e+01 8.000e+01 1.650e+00\n",
-      "  2.030e+00 3.700e-01 1.630e+00 3.400e+00 1.000e+00 3.170e+00]\n",
-      " [2.000e+00 1.221e+01 1.190e+00 1.750e+00 1.680e+01 1.510e+02 1.850e+00\n",
-      "  1.280e+00 1.400e-01 2.500e+00 2.850e+00 1.280e+00 3.070e+00]]\n",
+      "6\n",
       "\n",
       "----- segmentation -----\n",
       "\n",
-      "(210, 20)\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/pgdock/anaconda3/lib/python3.6/site-packages/ipykernel_launcher.py:35: RuntimeWarning: divide by zero encountered in true_divide\n",
-      "/home/pgdock/anaconda3/lib/python3.6/site-packages/ipykernel_launcher.py:35: RuntimeWarning: invalid value encountered in multiply\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "KS: 4 [[ 1.4000000e+02  7.3000000e+01  9.0000000e+00  0.0000000e+00\n",
-      "   0.0000000e+00  1.7222214e+00  8.2775980e-01  7.7777740e-01\n",
-      "   1.0036957e+00  4.6296295e+01  4.5666668e+01  5.1111110e+01\n",
-      "   4.2111110e+01 -1.8888888e+00  1.4444445e+01 -1.2555555e+01\n",
-      "   5.1111110e+01  1.7615560e-01 -1.6815889e+00]\n",
-      " [ 4.0000000e+00  1.8900000e+02  9.0000000e+00  0.0000000e+00\n",
-      "   0.0000000e+00  2.0555565e+00  3.8851852e+00  1.1722221e+01\n",
-      "   1.1459634e+02  2.6444445e+01  2.3444445e+01  3.3000000e+01\n",
-      "   2.2888890e+01 -9.0000000e+00  1.9666666e+01 -1.0666667e+01\n",
-      "   3.3000000e+01  2.7147257e-01 -2.1010017e+00]\n",
-      " [ 1.2400000e+02  2.9000000e+01  9.0000000e+00  0.0000000e+00\n",
-      "   0.0000000e+00  1.0000013e+00  7.1110760e-01  1.0555534e+00\n",
-      "   9.0741664e-01  1.2844444e+02  1.1922222e+02  1.4288889e+02\n",
-      "   1.2322222e+02 -2.7666666e+01  4.3333332e+01 -1.5666667e+01\n",
-      "   1.4288889e+02  1.6561614e-01 -2.2711280e+00]\n",
-      " [ 1.9700000e+02  2.3600000e+02  9.0000000e+00  0.0000000e+00\n",
-      "   0.0000000e+00  2.4444444e+00  6.8296280e+00  3.3333333e+00\n",
-      "   7.5999980e+00  1.6074074e+01  1.3111111e+01  1.6666668e+01\n",
-      "   1.8444445e+01 -8.8888890e+00  1.7777778e+00  7.1111110e+00\n",
-      "   1.8555555e+01  2.9272884e-01  2.7898002e+00]]\n",
+      "(210, 20)\n",
+      "3\n",
       "\n",
       "----- ionosphere -----\n",
       "\n",
-      "(351, 35)\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/pgdock/anaconda3/lib/python3.6/site-packages/ipykernel_launcher.py:35: RuntimeWarning: divide by zero encountered in true_divide\n",
-      "/home/pgdock/anaconda3/lib/python3.6/site-packages/ipykernel_launcher.py:35: RuntimeWarning: invalid value encountered in multiply\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "KS: 7 [[ 1.       0.       0.21429 -0.09524  0.33333  0.07143  0.19048  0.19048\n",
-      "   0.2381   0.09524  0.40476  0.02381  0.30952 -0.04762  0.30952 -0.04762\n",
-      "   0.28571 -0.11905  0.33333  0.04762  0.30952  0.       0.21429 -0.11905\n",
-      "   0.35714 -0.04762  0.22109 -0.0229   0.19048  0.       0.16997 -0.02034\n",
-      "   0.14694 -0.01877]\n",
-      " [ 1.       0.       1.      -0.5421   1.      -1.       1.      -1.\n",
-      "   1.       0.36217  1.      -0.41119  1.       1.       1.      -1.\n",
-      "   1.      -0.29354  1.      -0.93599  1.       1.       1.       1.\n",
-      "   1.      -0.40888  1.      -0.62745  1.      -1.       1.      -1.\n",
-      "   1.      -1.     ]\n",
-      " [ 1.       0.       0.9287   0.33164  0.76168  0.62349  0.49305  0.84266\n",
-      "   0.21592  0.95193 -0.13956  0.96167 -0.47202  0.8359  -0.70747  0.6549\n",
-      "  -0.87474  0.3675  -0.91814  0.05595 -0.89824 -0.26173 -0.73969 -0.54069\n",
-      "  -0.50757 -0.74735 -0.22323 -0.86122  0.0781  -0.87159  0.36021 -0.78057\n",
-      "   0.59407 -0.6027 ]\n",
-      " [ 1.       0.       1.       0.06843  1.       0.14211  1.       0.22108\n",
-      "   1.      -0.125    1.       0.39495  1.       0.48981  1.       0.58986\n",
-      "  -0.375    1.       1.       0.       1.       0.92001  1.       1.\n",
-      "   1.       1.       1.       1.       1.       0.25     1.       1.\n",
-      "   1.       1.     ]\n",
-      " [ 0.       0.       1.      -1.       1.      -1.       1.      -1.\n",
-      "   1.      -1.       1.       1.       1.       1.       1.      -1.\n",
-      "   1.       1.       1.       1.       1.       1.       1.      -1.\n",
-      "   1.      -1.       1.      -1.       1.       0.65625  0.       0.\n",
-      "   1.      -1.     ]\n",
-      " [ 1.       0.       1.       0.54902  0.62745  1.       0.01961  1.\n",
-      "  -0.4902   0.92157 -0.82353  0.58824 -1.       0.11765 -0.96078 -0.33333\n",
-      "  -0.64706 -0.68627 -0.23529 -0.86275  0.35294 -1.       0.7451  -0.72549\n",
-      "   0.92157 -0.21569  0.92874  0.21876  0.72549  0.56863  0.23529  0.90196\n",
-      "  -0.11765  0.90196]\n",
-      " [ 1.       0.       0.94531 -0.03516 -1.      -0.33203 -1.      -0.01563\n",
-      "   0.97266  0.01172  0.93359 -0.01953 -1.       0.16406 -1.      -0.00391\n",
-      "   0.95313 -0.03516  0.92188 -0.02734 -0.99219  0.11719 -0.93359  0.34766\n",
-      "   0.95703 -0.00391  0.82041  0.13758  0.90234 -0.06641 -1.      -0.1875\n",
-      "  -1.      -0.34375]]\n"
+      "(351, 35)\n",
+      "5\n"
      ]
     }
    ],
@@ -369,24 +296,32 @@
     "        else: #Target na última coluna\n",
     "            target = data.iloc[:,-1]\n",
     "            data = data.iloc[:,:-1]\n",
-    "        run(data)\n",
-    "        clustering_times = []\n",
-    "        start = time()\n",
-    "        k = ks[index]\n",
-    "        kmeans = KMeans(n_clusters=k, random_state=100, init=kmeansType, n_init=1, max_iter=100).fit(data)\n",
+    "        centers = run(data)\n",
+    "        print(len(centers))\n",
+    "#         clustering_times = []\n",
+    "#         start = time()\n",
+    "#         k = ks[index]\n",
+    "#         kmeans = KMeans(n_clusters=k, random_state=100, init=kmeansType, n_init=1, max_iter=100).fit(data)\n",
     "        #display(data)\n",
-    "        error = getSquaredError(data, kmeans)\n",
+    "#         error = getSquaredError(data, kmeans)\n",
     "        #print(kmeans.labels_)\n",
-    "        end = time()\n",
-    "        T1 = error/(data.shape[0])\n",
-    "        T2 = error/(data.shape[0]/2)\n",
+    "#         end = time()\n",
+    "#         T1 = error/(data.shape[0])\n",
+    "#         T2 = error/(data.shape[0]/2)\n",
     "        \n",
     "        #print(canopy(data.values, T1, T2))\n",
     "        #print(\"Erro quadrático médio: \",error)\n",
-    "        clustering_times.append(end - start)\n",
+    "#         clustering_times.append(end - start)\n",
     "        #print(clustering_times)\n",
     "        #print(kmeans.cluster_centers_)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -405,7 +340,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.7.1"
   }
  },
  "nbformat": 4,
